menu logo spacing (fixes #95) (fixes #117) (#107)

--- a/src/Layout/DashboardLayout/dashboard.css
+++ b/src/Layout/DashboardLayout/dashboard.css
@@ -9,14 +9,15 @@
   font-size: 24px;
   font-weight: 600;
   font-family: "IBM Plex Sans", sans-serif;
-  margin-top: 2.5em;
+  margin-top: 2em;
 }
 
 .dashboard-header {
-  display: flex;
   width: 100%;
-  height: 40px;
-  justify-content: space-between;
+}
+
+.mobile-logo {
+  width: 230px;
 }
 
 .footer-nav {
@@ -65,7 +66,7 @@
 
 @media only screen and (max-width: 1020px) {
   .layout-container > h1 {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
   }
 }
 
